--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,14 +26,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
-    - name: Archive Release
-      uses: thedoctor0/zip-release@master
-      with:
-        filename: 'release.zip'
-        path: 'dist'
     - name: Upload build result
       uses: actions/upload-artifact@v2
       with:
-        name: Build
-        path: release.zip
+        name: production
+        path: dist
     #- run: npm test
