--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --env.production",
     "start-dev": "nodemon server.js",
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/VocaloidLuoTianyi/QQ-Message-PV#readme",
   "dependencies": {
     "@babel/core": "^7.11.1",
+    "@babel/preset-typescript": "^7.10.4",
     "@types/jquery": "^3.5.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.1",
@@ -30,14 +31,18 @@
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
-    "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "pug-html-loader": "^1.1.5",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
+    "svg-to-vue-component": "^0.3.8",
+    "sweetalert2": "^9.17.1",
     "terser-webpack-plugin": "^4.1.0",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
